# swupd-daemon

./: AUTHORS  Makefile.am  configure.ac
interfaces/: org.O1.swupdd.Client.xml
src/: Makefile.am  global-state.c  global-state.h  log.h  swupdd-main.c
